Add image to measurements (#16)
* Add Image dependency

* Add Image option to measurements table

* Update documentation

* Fix error on factory

* Test again to fix CI error

* Remove from factory
