# laravel/app/Http/Resources/Measurement.php
@@ -27,6 +27,7 @@ class Measurement extends JsonResource
             'finger_ring' => $this->finger_ring,
             'finger_pink' => $this->finger_pink,
             'wrist' => $this->wrist,
+            'image' => $this->image,
             'created_at' => $this->created_at->format('d-m-Y H:m:s'),
             'updated_at' => $this->updated_at->format('d-m-Y H:m:s'),
         ];
